image clipping fixed

--- a/homepage.css
+++ b/homepage.css
@@ -389,7 +389,7 @@ footer #blog-panels .whats-hot-block h3 {
 
 #blog-panels .whats-hot-block img {
 	position: absolute;
-	width: 100%;
+	width: 276px;
 	max-width: 200%;
 	min-width: 101%;
 	min-height: 100%;
